--- a/public/styles/stylesReceta/detalleRecetaStyle.css
+++ b/public/styles/stylesReceta/detalleRecetaStyle.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
 }
 
-h1 {
+.specialH1 {
     text-align: center;
     color: #4b4b4b;
 }
@@ -54,7 +54,7 @@ thead {
     background-color: #f2f2f2;
 }
 
-img {
+.specialIMG {
     display: block;
     margin: 10px auto;
 }
